--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<br>
 
 		<video controls autoplay loop muted>
-			<source src="ayaka.mkv" type="video/mkv">
+			<source src="ayaka.mkv" type="video/mp4">
 		</video>
 
 		<br><br><br><br>
