--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>✨zharifanny/forssellfritz✨</title>
+	<!--ijin ga ijin pake ae bebas, sak karepmu bosku-->
 </head>
 <body style="background-color: #000000;">
 	<center>
