--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
 		<br>
 
-		<video controls autoplay loop muted>
+		<video controls playsinline autoplay loop muted>
 			<source src="ayaka.mkv" type="video/mp4">
 		</video>
 
